src/test/deca/context/valid/provided/test14.deca
class X{
    X boomy(float x){}
}
class Z extends X{
    X boomy(float x){}
}
class Y extends X{
    Z boomy(float x){}
}