src/test/deca/context/invalid/provided/testi10.deca
class A{
    protected int x;
    void setX(int x){}
}
class B extends A{
    void setX(float x){}
}